--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -1,1 +1,11 @@
+@import (inline) '../vendor/normalize.css/normalize.css';
+@import 'includes/vars';
 @import 'includes/base';
+@import 'includes/header';
+@import 'includes/nav';
+@import 'includes/inline';
+@import 'includes/logo';
+@import 'includes/sidebar';
+@import 'includes/get_started_progress';
+@import 'includes/progress_bar';
+@import 'includes/user_pick';
