Исправла верстка меню

--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -1,6 +1,7 @@
 @import (inline) '../vendor/normalize.css/normalize.css';
 @import 'includes/vars';
 @import 'includes/base';
+@import 'includes/page';
 @import 'includes/header';
 @import 'includes/nav';
 @import 'includes/inline';
@@ -9,3 +10,5 @@
 @import 'includes/get_started_progress';
 @import 'includes/progress_bar';
 @import 'includes/user_pick';
+@import 'includes/menu';
+@import 'includes/icon';
