--- a/sources/less/includes/header.less
+++ b/sources/less/includes/header.less
@@ -1,4 +1,6 @@
 .header {
+  position: relative;
+  z-index: 1;
   padding: 0 30px;
   background: #fff;
   box-shadow: 0 3px 6px rgba(0,0,0,0.025);
