Исправлна верстка меню

--- a/sources/less/includes/base.less
+++ b/sources/less/includes/base.less
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   font-size: 14px;
+  font-family: OpenSans, sans-serif;
   background: #fff;
   color: @black;
 }
@@ -9,4 +10,8 @@ body {
 a {
   color: @blue;
   text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
