--- a/sources/less/includes/menu.less
+++ b/sources/less/includes/menu.less
@@ -1,6 +1,10 @@
 .menu {
   font-size: 15px;
   color: @black;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 .menu-item {
@@ -24,10 +28,10 @@
 
 .menu-item_active {
   .menu-item__link {
-    font-weight: bold;
+    font-weight: 500;
     color: @blue;
 
-    .icon {
+    .menu-icon {
       &:before {
         display: block;
       }
@@ -44,10 +48,10 @@
   z-index: 0;
   display: block;
   margin: 0 0 0 -70px;
-  padding: 15px 0 15px 70px;
+  padding: 18px 0 18px 70px;
   color: @black;
 
-  .icon {
+  .menu-icon {
     position: absolute;
     left: 30px;
 
