--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -1,5 +1,6 @@
 @import (inline) '../vendor/normalize.css/normalize.css';
 @import 'includes/vars';
+@import 'includes/fonts';
 @import 'includes/base';
 @import 'includes/page';
 @import 'includes/header';
@@ -11,4 +12,4 @@
 @import 'includes/progress_bar';
 @import 'includes/user_pick';
 @import 'includes/menu';
-@import 'includes/icon';
+@import 'includes/menu_icon';
