--- a/sources/less/includes/menu_icon.less
+++ b/sources/less/includes/menu_icon.less
@@ -1,8 +1,10 @@
-.icon {
+.menu-icon {
   position: relative;
   z-index: 0;
   display: inline-block;
   vertical-align: middle;
+  width: 21px;
+  height: 21px;
 
   &:after,
   &:before {
@@ -26,13 +28,7 @@
   }
 }
 
-.icon_dashboard {
-  &:after,
-  &:before {
-    width: 21px;
-    height: 14px;
-  }
-
+.menu-icon_dashboard {
   &:after {
     background-image: data-uri('../img/icon_dashboard.png');
   }
@@ -42,13 +38,7 @@
   }
 }
 
-.icon_apps {
-  &:after,
-  &:before {
-    width: 20px;
-    height: 20px;
-  }
-
+.menu-icon_apps {
   &:after {
     background-image: data-uri('../img/icon_apps.png');
   }
@@ -58,13 +48,7 @@
   }
 }
 
-.icon_analytics {
-  &:after,
-  &:before {
-    width: 20px;
-    height: 20px;
-  }
-
+.menu-icon_analytics {
   &:after {
     background-image: data-uri('../img/icon_analytics.png');
   }
@@ -74,13 +58,7 @@
   }
 }
 
-.icon_referrals {
-  &:after,
-  &:before {
-    width: 21px;
-    height: 21px;
-  }
-
+.menu-icon_referrals {
   &:after {
     background-image: data-uri('../img/icon_referrals.png');
   }
@@ -90,13 +68,7 @@
   }
 }
 
-.icon_payments {
-  &:after,
-  &:before {
-    width: 11px;
-    height: 18px;
-  }
-
+.menu-icon_payments {
   &:after {
     background-image: data-uri('../img/icon_payments.png');
   }
@@ -106,13 +78,7 @@
   }
 }
 
-.icon_balance {
-  &:after,
-  &:before {
-    width: 20px;
-    height: 19px;
-  }
-
+.menu-icon_balance {
   &:after {
     background-image: data-uri('../img/icon_balance.png');
   }
