--- a/sources/less/includes/nav.less
+++ b/sources/less/includes/nav.less
@@ -5,6 +5,10 @@
   line-height: 80px;
   font-size: 15px;
   text-transform: uppercase;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 .nav__item {
