Исправлна верстка топа

--- a/sources/less/includes/header.less
+++ b/sources/less/includes/header.less
@@ -4,10 +4,6 @@
   padding: 0 30px;
   background: #fff;
   box-shadow: 0 3px 6px rgba(0,0,0,0.025);
-
-  .get-started-progress {
-    margin-right: -30px;
-  }
 }
 
 .header__inner {
@@ -32,5 +28,10 @@
 
   a {
     color: @gray;
+  }
+
+  .logout-button {
+    margin-left: -30px;
+    margin-right: -30px;
   }
 }
