--- a/sources/less/includes/menu.less
+++ b/sources/less/includes/menu.less
@@ -22,12 +22,12 @@
 }
 
 .menu-item_active,
-.menu-item:hover {
+.menu-item a:hover {
   background: #f1f6f8;
 }
 
 .menu-item_active {
-  .menu-item__link {
+  .menu-item__title {
     font-weight: 500;
     color: @blue;
 
@@ -43,7 +43,7 @@
   }
 }
 
-.menu-item__link {
+.menu-item__title {
   position: relative;
   z-index: 0;
   display: block;
