--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -14,3 +14,5 @@
 @import 'includes/menu';
 @import 'includes/menu_icon';
 @import 'includes/logout_button';
+@import 'includes/content';
+@import 'includes/copy';
