--- a/sources/less/includes/sidebar.less
+++ b/sources/less/includes/sidebar.less
@@ -1,8 +1,7 @@
 .sidebar {
   position: relative;
-  box-sizing: border-box;
   width: 260px;
-  min-height: ~'calc(100% - 80px)';
+  height: 100%;
   padding: 0 0 100px;
   background: #f8fafb;
 
@@ -33,28 +32,4 @@
   bottom: 0;
   left: 0;
   padding: 0 0 20px 30px;
-  font-size: 13px;
-  color: @gray;
-
-  a {
-    color: @gray;
-  }
-
-  ul {
-    list-style-type: none;
-    margin: 0 0 20px;
-    padding: 0;
-  }
-
-  li {
-    margin: 0 0 10px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  p {
-    margin: 0;
-  }
 }
