Добавлна верстка страницы monetize dashboard

--- a/sources/less/includes/base.less
+++ b/sources/less/includes/base.less
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  font-size: 14px;
+  font-size: 15px;
   font-family: OpenSans, sans-serif;
   background: #fff;
   color: @black;
@@ -14,4 +14,8 @@ a {
   &:hover {
     text-decoration: underline;
   }
+}
+
+button {
+  font-family: inherit;
 }
