--- a/sources/less/includes/inline.less
+++ b/sources/less/includes/inline.less
@@ -16,3 +16,23 @@
     margin-right: 0!important;
   }
 }
+
+.inline__item_space_xs {
+  margin-left: 2px;
+  margin-right: 2px;
+}
+
+.inline__item_space_sm {
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
+.inline__item_space_md {
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+.inline__item_space_lg {
+  margin-left: 20px;
+  margin-right: 20px;
+}
