--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -16,3 +16,21 @@
 @import 'includes/logout_button';
 @import 'includes/content';
 @import 'includes/copy';
+@import 'includes/title';
+@import 'includes/pan';
+@import 'includes/icon';
+@import 'includes/button';
+@import 'includes/grid';
+@import 'includes/panel';
+@import 'includes/indicator';
+@import 'includes/badge';
+@import 'includes/tabs';
+@import 'includes/table';
+@import 'includes/tooltip';
+@import 'includes/chart_panel';
+@import 'includes/table_panel';
+@import 'includes/checkbox';
+@import 'includes/popover';
+@import 'includes/daterange';
+@import 'includes/datepicker';
+@import 'includes/chart';
