--- a/sources/less/includes/fonts.less
+++ b/sources/less/includes/fonts.less
@@ -1,5 +1,11 @@
 @font-face {
   font-family: OpenSans;
+  font-weight: 300;
+  src: url('../vendor/open_sans/OpenSans-Light.ttf');
+}
+
+@font-face {
+  font-family: OpenSans;
   src: url('../vendor/open_sans/OpenSans-Regular.ttf');
 }
 
