--- a/sources/less/includes/icon.less
+++ b/sources/less/includes/icon.less
@@ -60,3 +60,38 @@
     background-image: data-uri('../img/icon_tooltip.png');
   }
 }
+
+.icon_apple {
+  width: 14px;
+  height: 18px;
+
+  &:after {
+    background-image: data-uri('../img/icon_apple.png');
+  }
+}
+
+.icon_android {
+  width: 15px;
+  height: 17px;
+
+  &:after {
+    background-image: data-uri('../img/icon_android.png');
+  }
+}
+
+.icon_cursor {
+  width: 9px;
+  height: 9px;
+}
+
+.icon_cursor_right {
+  &:after {
+    background-image: data-uri('../img/icon_cursor_right.png');
+  }
+}
+
+.icon_cursor_down {
+  &:after {
+    background-image: data-uri('../img/icon_cursor_down.png');
+  }
+}
