--- a/sources/less/includes/inline.less
+++ b/sources/less/includes/inline.less
@@ -3,6 +3,10 @@
   vertical-align: middle;
 }
 
+.inline_fixed {
+  white-space: nowrap;
+}
+
 .inline__item {
   display: inline-block;
   vertical-align: middle;
