--- a/sources/less/includes/user_pick.less
+++ b/sources/less/includes/user_pick.less
@@ -1,12 +1,13 @@
-.user-pick {
+.pick {
   display: inline-block;
   vertical-align: middle;
-  width: 36px;
-  height: 36px;
   border-radius: 100%;
   overflow: hidden;
+  width: 36px;
+  height: 36px;
+}
 
-  img {
-    display: block;
-  }
+.pick_app {
+  width: 50px;
+  height: 50px;
 }
