Добавлена верстка страницы create app

--- a/sources/less/includes/button.less
+++ b/sources/less/includes/button.less
@@ -40,6 +40,10 @@
   box-shadow: none;
 }
 
+.button_submit {
+  min-width: 200px;
+}
+
 .button_small {
   padding: 7px 10px;
   font-size: 13px;
@@ -50,6 +54,12 @@
 .button_sm {
   padding: 9px 20px;
   font-size: 12px;
+}
+
+.button_md {
+  padding-top: 17px;
+  padding-bottom: 17px;
+  font-size: 14px;
 }
 
 .button__text {
