--- a/sources/less/includes/content.less
+++ b/sources/less/includes/content.less
@@ -22,3 +22,13 @@
 .content__title {
   margin: 0 0 20px;
 }
+
+.content__main {
+  width: 70%;
+  float: left;
+}
+
+.content__side {
+  width: 30%;
+  margin: 0 0 0 40%;
+}
