--- a/sources/less/includes/icon.less
+++ b/sources/less/includes/icon.less
@@ -68,6 +68,18 @@
   &:after {
     background-image: data-uri('../img/icon_apple.png');
   }
+
+  &.icon_white {
+    &:after {
+      background-image: data-uri('../img/icon_apple_white.png');
+    }
+  }
+
+  &.icon_blue {
+    &:after {
+      background-image: data-uri('../img/icon_apple_blue.png');
+    }
+  }
 }
 
 .icon_android {
@@ -76,6 +88,35 @@
 
   &:after {
     background-image: data-uri('../img/icon_android.png');
+  }
+
+  &.icon_white {
+    &:after {
+      background-image: data-uri('../img/icon_android_white.png');
+    }
+  }
+
+  &.icon_blue {
+    &:after {
+      background-image: data-uri('../img/icon_android_blue.png');
+    }
+  }
+}
+
+.icon_web {
+  width: 18px;
+  height: 18px;
+
+  &.icon_white {
+    &:after {
+      background-image: data-uri('../img/icon_web_white.png');
+    }
+  }
+
+  &.icon_blue {
+    &:after {
+      background-image: data-uri('../img/icon_web_blue.png');
+    }
   }
 }
 
