--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -35,3 +35,5 @@
 @import 'includes/datepicker';
 @import 'includes/chart';
 @import 'includes/apps_table';
+@import 'includes/field';
+@import 'includes/select2';
