--- a/sources/less/includes/tabs.less
+++ b/sources/less/includes/tabs.less
@@ -1,9 +1,20 @@
 .tabs {
   overflow: hidden;
+  line-height: 1;
   border: 1px solid @gray;
   font-size: 13px;
   color: @blue;
   border-radius: 8px;
+
+  input[type=radio] {
+    display: none;
+  }
+}
+
+.tabs_size_3 {
+  .tabs__item {
+    width: ~'calc(100% / 3)';
+  }
 }
 
 .tabs__item {
@@ -18,9 +29,21 @@
   &:last-child {
     border-right: none;
   }
+
+  .icon_white {
+    display: none;
+  }
 }
 
 .tabs__item_active {
   background: @gray;
   color: #fff;
+
+  .icon_white {
+    display: inline-block;
+  }
+
+  .icon_blue {
+    display: none;
+  }
 }
