Добавлена верстка страницы app settings

--- a/sources/less/includes/checkbox.less
+++ b/sources/less/includes/checkbox.less
@@ -30,6 +30,10 @@
   background: data-uri('../img/checkbox.png') center center no-repeat;
 }
 
+.checkbox__ctrl_space_sm {
+  margin-right: 5px;
+}
+
 .checkbox__label {
   display: inline-block;
   vertical-align: middle;
