--- a/sources/less/includes/content.less
+++ b/sources/less/includes/content.less
@@ -5,16 +5,16 @@
   height: ~'calc(100% - 80px)';
 }
 
-.content__section {
+.content__col {
   display: table-cell;
   vertical-align: top;
 }
 
-.content__section_left {
+.content__col_left {
   width: 260px;
 }
 
-.content__section_right {
+.content__col_right {
   width: auto;
   padding: 30px 30px 10px;
 }
@@ -31,4 +31,8 @@
 .content__side {
   width: 30%;
   margin: 0 0 0 40%;
+}
+
+.content__section {
+  margin: 0 0 20px;
 }
