--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -37,3 +37,6 @@
 @import 'includes/apps_table';
 @import 'includes/field';
 @import 'includes/select2';
+@import 'includes/collapsed';
+@import 'includes/list';
+@import 'includes/collapsed_panel';
