--- a/sources/less/includes/base.less
+++ b/sources/less/includes/base.less
@@ -14,6 +14,10 @@ a {
   &:hover {
     text-decoration: underline;
   }
+
+  &.gray {
+    color: @gray;
+  }
 }
 
 button,
@@ -23,4 +27,8 @@ input {
 
 select {
   width: 100%;
+}
+
+p {
+  margin: 0 0 20px;
 }
