Добавлена страница payment info

--- a/sources/less/includes/button.less
+++ b/sources/less/includes/button.less
@@ -34,6 +34,11 @@
   color: #fff;
 }
 
+.button_red {
+  background: #f13d5b;
+  color: #fff;
+}
+
 .button_bordered_blue {
   border-color: @blue;
   color: @blue;
