--- a/sources/less/includes/select2.less
+++ b/sources/less/includes/select2.less
@@ -10,10 +10,13 @@
   padding-right: 20px;
 }
 
-
 .select2-container--default .select2-selection--single .select2-selection__arrow {
   height: 48px;
   width: 49px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__placeholder {
+  color: @gray;
 }
 
 .select2-container--default .select2-selection--multiple,
