--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -40,3 +40,5 @@
 @import 'includes/collapsed';
 @import 'includes/list';
 @import 'includes/collapsed_panel';
+@import 'includes/popup';
+@import 'includes/dialog';
