--- a/sources/less/includes/panel.less
+++ b/sources/less/includes/panel.less
@@ -26,3 +26,9 @@
 .panel_popover {
   box-shadow: 0 0 30px rgba(0,0,0,0.1);
 }
+
+.panel__title {
+  margin: 0 0 25px;
+  font-size: 15px;
+  font-weight: bold;
+}
