Добавлена страница new placement

--- a/sources/less/includes/collapsed_panel.less
+++ b/sources/less/includes/collapsed_panel.less
@@ -9,13 +9,15 @@
       visibility: visible;
     }
 
-    .icon_cursor_down {
-      display: inline-block;
-      opacity: 0.5;
-    }
+    .collapsed-panel__header {
+      .icon_cursor_down {
+        display: inline-block;
+        opacity: 0.5;
+      }
 
-    .icon_cursor_right {
-      display: none;
+      .icon_cursor_right {
+        display: none;
+      }
     }
   }
 }
