--- a/sources/less/includes/content.less
+++ b/sources/less/includes/content.less
@@ -10,27 +10,23 @@
   vertical-align: top;
 }
 
-.content__col_left {
+.content__col_side {
   width: 260px;
 }
 
-.content__col_right {
+.content__col_main {
   width: auto;
   padding: 30px 30px 10px;
 }
 
+.content__col_right {
+  width: 25%;
+  vertical-align: middle;
+  background: #f8fafb;
+}
+
 .content__title {
   margin: 0 0 20px;
-}
-
-.content__main {
-  width: 70%;
-  float: left;
-}
-
-.content__side {
-  width: 30%;
-  margin: 0 0 0 40%;
 }
 
 .content__section {
