--- a/sources/less/includes/panel.less
+++ b/sources/less/includes/panel.less
@@ -32,3 +32,11 @@
   font-size: 15px;
   font-weight: bold;
 }
+
+.panel__section {
+  margin: 0 0 50px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
