--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -42,3 +42,5 @@
 @import 'includes/collapsed_panel';
 @import 'includes/popup';
 @import 'includes/dialog';
+@import 'includes/section';
+@import 'includes/placement';
