Добавлена страница analytics

--- a/sources/less/includes/button.less
+++ b/sources/less/includes/button.less
@@ -14,6 +14,7 @@
   box-shadow: 0 0 10px rgba(0,0,0,0.15);
   background-color: transparent;
   cursor: pointer;
+  outline: none;
 
   .icon {
     margin-right: 5px;
@@ -50,6 +51,7 @@
 }
 
 .button_small {
+  min-height: 34px;
   padding: 7px 10px;
   font-size: 13px;
   font-weight: normal;
