--- a/sources/less/includes/icon.less
+++ b/sources/less/includes/icon.less
@@ -136,3 +136,18 @@
     background-image: data-uri('../img/icon_cursor_down.png');
   }
 }
+
+.icon_set-default {
+  width: 24px;
+  height: 24px;
+  background: #e7eaec;
+  color: #fff;
+  border-radius: 24px;
+  text-align: center;
+
+  &:after {
+    content: '×';
+    font-size: 14px;
+    line-height: 24px;
+  }
+}
