--- a/sources/less/includes/popover.less
+++ b/sources/less/includes/popover.less
@@ -9,13 +9,21 @@
   }
 
   .popover__content_bottom-center {
+    top: 100%;
     left: 50%;
-    transition: opacity 0.2s ease, left 0s linear 0s;
+    transition: opacity 0.2s ease, left 0s linear 0s, top 0s linear 0s;
   }
 
   .popover__content_bottom-right {
+    top: 100%;
     right: 0;
-    transition: opacity 0.2s ease, right 0s linear 0s;
+    transition: opacity 0.2s ease, right 0s linear 0s, top 0s linear 0s;
+  }
+
+  .popover__content_bottom-left {
+    top: 100%;
+    left: 0;
+    transition: opacity 0.2s ease, left 0s linear 0s, top 0s linear 0s;
   }
 }
 
@@ -29,16 +37,27 @@
 }
 
 .popover__content_bottom-center {
-  top: 100%;
+  top: -99999px;
   left: -99999px;
   transform: translateX(-50%);
   margin: 10px 0 0;
-  transition: opacity 0.2s ease, left 0s linear 0.2s;
+  transition: opacity 0.2s ease, left 0s linear 0.2s, top 0s linear 0.2s;
 }
 
 .popover__content_bottom-right {
-  top: 100%;
+  top: -99999px;
   right: 99999px;
   margin: 10px 0 0;
-  transition: opacity 0.2s ease, right 0s linear 0.2s;
+  transition: opacity 0.2s ease, right 0s linear 0.2s, top 0s linear 0.2s;
+}
+
+.popover__content_bottom-left {
+  top: -99999px;
+  left: -999999px;
+  margin: 10px 0 0;
+  transition: opacity 0.2s ease, left 0s linear 0.2s, top 0s linear 0.2s;
+}
+
+.popover__content_full-width {
+  width: 100%;
 }
