--- a/sources/less/index.less
+++ b/sources/less/index.less
@@ -44,3 +44,5 @@
 @import 'includes/dialog';
 @import 'includes/section';
 @import 'includes/placement';
+@import 'includes/tags';
+@import 'includes/cursor';
