--- a/sources/less/includes/field.less
+++ b/sources/less/includes/field.less
@@ -44,10 +44,15 @@
   }
 }
 
+.field_md {
+  margin-bottom: 10px;
+}
+
 .field__data {
   box-sizing: border-box;
   width: 100%;
   height: 50px;
+  line-height: 48px;
   padding: 0 20px;
   margin: 0;
   border: 1px solid #e6e9ed;
@@ -71,8 +76,29 @@
   }
 }
 
+.field__data_md {
+  height: 36px;
+  line-height: 34px;
+}
+
 .field__data_copy {
   padding-right: 100px;
+}
+
+.field__data_select-group {
+  position: relative;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding-right: 30px;
+  font-size: 14px;
+
+  .icon_cursor {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    margin-top: -4.5px;
+  }
 }
 
 .field__hint {
