--- a/sources/less/includes/select2.less
+++ b/sources/less/includes/select2.less
@@ -30,13 +30,16 @@
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
-  height: 29px;
-  line-height: 29px;
-  margin-top: 10px;
-  margin-right: 10px;
+  height: 26px;
+  line-height: 26px;
+  margin-top: 12px;
+  margin-right: 12px;
   padding-right: 10px;
   padding-left: 10px;
   border: none;
+  border-radius: 26px;
+  font-size: 11px;
+  text-transform: uppercase;
   background: @blue;
   color: #fff;
 }
@@ -57,9 +60,9 @@
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__rendered {
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-bottom: 10px;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-bottom: 12px;
   vertical-align: top;
 }
 
@@ -84,4 +87,50 @@
 .select2-container--default .select2-results__option[aria-selected=true] {
   background: @gray;
   color: #fff;
+}
+
+.select2-container--group .select2-selection--multiple .select2-selection__choice {
+  float: none;
+  display: inline;
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
+  text-transform: initial;
+  line-height: 34px;
+  background: none;
+  color: @black;
+
+  &:before {
+    content: ', ';
+  }
+
+  &:first-child {
+    &:before {
+      display: none;
+    }
+  }
+}
+
+.select2-container--default .select2-search--dropdown .select2-search__field {
+  border-color: @gray;
+  border-radius: 5px;
+  outline: none;
+}
+
+.select2-wrapper_sm {
+  .select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 34px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 14px;
+  }
+
+  .select2-container--default .select2-selection--single {
+    height: 36px;
+  }
+
+  .select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 34px;
+    width: 34px;
+  }
 }
