--- a/sources/less/includes/placement.less
+++ b/sources/less/includes/placement.less
@@ -28,7 +28,7 @@
 }
 
 .placement__type_rewarded-video {
-  background-image: url('../img/placement_rewarded_video.png');
+  background-image: url('../img/placement_rewarded_video.jpg');
 }
 
 .placement__type_interstitial-video {
