Добавлны страницы профиля

--- a/sources/less/includes/menu_icon.less
+++ b/sources/less/includes/menu_icon.less
@@ -87,3 +87,16 @@
     background-image: data-uri('../img/icon_balance_blue.png');
   }
 }
+
+.menu-icon_user {
+  width: 24px;
+  height: 24px;
+
+  &:after {
+    background-image: data-uri('../img/icon_user_gray.png');
+  }
+
+  &:before {
+    background-image: data-uri('../img/icon_user_blue.png');
+  }
+}
