--- a/sources/less/includes/field.less
+++ b/sources/less/includes/field.less
@@ -35,11 +35,39 @@
     padding: 0 10px;
 
     &:first-child {
-      padding-left: 0;
+      padding-left: 0!important;
     }
 
     &:last-child {
-      padding-right: 0;
+      padding-right: 0!important;
+    }
+  }
+
+  .field__row {
+    display: table-row;
+
+    &:last-child {
+      .field__section {
+        padding-bottom: 0!important;
+      }
+    }
+
+    .field__section {
+      padding-bottom: 10px;
+    }
+  }
+}
+
+.field_checkboxs {
+  width: auto;
+
+  .field__section {
+    padding: 0 20px;
+  }
+
+  .field__row {
+    .field__section {
+      padding-bottom: 20px;
     }
   }
 }
