--- a/sources/less/includes/menu.less
+++ b/sources/less/includes/menu.less
@@ -39,14 +39,10 @@
   }
 }
 
-.menu-item_active {
-  background: @menu-hover-color;
-}
-
-.menu-item_active {
+.menu-item_active_no-link,
+.menu-item_active_link {
   .menu-item__title {
     font-weight: 500;
-    color: @blue;
 
     .menu-icon {
       &:before {
@@ -57,6 +53,14 @@
         display: none;
       }
     }
+  }
+}
+
+.menu-item_active_link {
+  background: @menu-hover-color;
+
+  .menu-item__title {
+    color: @blue;
   }
 }
 
@@ -71,6 +75,8 @@
   .menu-icon {
     position: absolute;
     left: 30px;
+    top: 50%;
+    margin-top: -11px;
 
     &:before {
       display: none;
