--- a/sources/less/includes/menu_icon.less
+++ b/sources/less/includes/menu_icon.less
@@ -100,3 +100,13 @@
     background-image: data-uri('../img/icon_user_blue.png');
   }
 }
+
+.menu-icon_attribution {
+  &:after {
+    background-image: data-uri('../img/icon_attribution_gray.png');
+  }
+
+  &:before {
+    background-image: data-uri('../img/icon_attribution_blue.png');
+  }
+}
