--- a/sources/less/includes/badge.less
+++ b/sources/less/includes/badge.less
@@ -2,28 +2,26 @@
   box-sizing: border-box;
   display: inline-block;
   vertical-align: middle;
-  line-height: 1;
-  padding: 3px 5px;
+  height: 19px;
+  min-width: 19px;
+  line-height: 19px;
+  padding: 0 5px;
   border-radius: 20px;
   text-align: center;
-  font-weight: bold;
-  background: #f2f5f7;
-}
-
-.badge_sm {
-  padding: 5px 10px;
   font-size: 12px;
-  font-weight: normal;
-}
-
-.badge_md {
-  min-width: 32px;
-  padding: 10px;
-  font-size: 13px;
-  font-weight: normal;
+  background: #f2f5f7;
 }
 
 .badge_green {
   background: @green;
   color: #fff;
+}
+
+.badge_md {
+  min-width: 32px;
+  height: 32px;
+  line-height: 32px;
+  padding: 0 12px;
+  font-size: 13px;
+  font-weight: normal;
 }
