--- a/sources/less/includes/tabs.less
+++ b/sources/less/includes/tabs.less
@@ -30,6 +30,11 @@
   text-align: center;
   border-right: 1px solid @gray;
   cursor: pointer;
+  transition: all 0.2s ease;
+
+  &:hover {
+    background: #f5f5f5;
+  }
 
   &:last-child {
     border-right: none;
@@ -41,7 +46,7 @@
 }
 
 .tabs__item_active {
-  background: @gray;
+  background: @gray!important;
   color: #fff;
 
   .icon_white {
