--- a/sources/less/includes/header.less
+++ b/sources/less/includes/header.less
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  z-index: 1;
+  z-index: 2;
   padding: 0 30px;
   background: #fff;
   box-shadow: 0 3px 6px rgba(0,0,0,0.025);
@@ -21,11 +21,52 @@
 
 .header__section_nav {
   text-align: center;
+
+  @media (max-width: 1279px) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  @media (max-width: 1023px) {
+    text-align: right;
+  }
 }
 
 .header__section_user {
   text-align: right;
   font-size: 14px;
+
+
+  @media (max-width: 1279px) {
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 0;
+    box-sizing: border-box;
+    display: none;
+    width: 100%;
+    padding: 20px 30px 0;
+    border-top: 1px solid #f8fafb;
+    font-size: 16px;
+    text-align: left;
+    box-shadow: 0 2px 2px rgba(0,0,0,0.1);
+    background: #fff;
+
+    .header.active & {
+      display: block;
+    }
+
+    .inline {
+      margin: 0;
+
+      .inline__item {
+        display: block;
+        margin: 0 0 20px;
+      }
+    }
+  }
 
   a {
     color: @gray;
@@ -37,6 +78,6 @@
 
   .logout-button {
     margin-left: -30px;
-    margin-right: -30px;
+    margin-right: -43px;
   }
 }
