--- a/sources/less/includes/nav.less
+++ b/sources/less/includes/nav.less
@@ -31,3 +31,21 @@
     background: @blue;
   }
 }
+
+.nav__item_menu-toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: none;
+  box-sizing: border-box;
+  width: 80px;
+  text-align: center;
+
+  @media (max-width: 1279px) {
+    display: inline-block;
+  }
+
+  @media (max-width: 1023px) {
+    position: static;
+  }
+}
