--- a/sources/less/includes/content.less
+++ b/sources/less/includes/content.less
@@ -1,4 +1,5 @@
 .content {
+  position: relative;
   display: table;
   width: 100%;
   height: 100%;
@@ -17,11 +18,46 @@
 
 .content__col_side {
   width: 260px;
+  background: #f8fafb;
+
+  @media (max-width: 1279px) {
+    display: block;
+    position: absolute;
+    z-index: 2;
+    left: 0;
+    overflow: hidden;
+    width: 80px;
+    height: 100%;
+    box-shadow: 1px 0 1px rgba(0,0,0,0.1);
+    transition: all 0.2s ease;
+
+    &:hover {
+      width: 260px;
+
+      .menu-item__label,
+      .sidebar__title,
+      .sidebar__copy {
+        opacity: 1;
+      }
+    }
+
+    .menu-item__label,
+    .sidebar__title,
+    .sidebar__copy {
+      opacity: 0;
+      transition: opacity 0.2s ease;
+    }
+  }
 }
 
 .content__col_main {
   width: auto;
   padding: 30px 30px 10px;
+
+  @media (max-width: 1279px) {
+    width: 100%;
+    padding-left: 110px;
+  }
 }
 
 .content__col_right {
