--- a/sources/less/includes/sidebar.less
+++ b/sources/less/includes/sidebar.less
@@ -1,9 +1,9 @@
 .sidebar {
   position: relative;
+  box-sizing: border-box;
   width: 260px;
   height: 100%;
   padding: 0 0 100px;
-  background: #f8fafb;
 
   .menu {
     margin-left: -30px;
