--- a/sources/less/includes/header.less
+++ b/sources/less/includes/header.less
@@ -43,9 +43,9 @@
     position: absolute;
     z-index: 1;
     top: 100%;
-    left: 0;
+    left: -100%;
+    opacity: 0;
     box-sizing: border-box;
-    display: none;
     width: 100%;
     padding: 20px 30px 0;
     border-top: 1px solid #f8fafb;
@@ -53,9 +53,12 @@
     text-align: left;
     box-shadow: 0 2px 2px rgba(0,0,0,0.1);
     background: #fff;
+    transition: opacity 0.2s ease, left 0s linear 0.2s;
 
     .header.active & {
-      display: block;
+      left: 0;
+      opacity: 1;
+      transition: opacity 0.2s ease, left 0s linear 0s;
     }
 
     .inline {
