Исправлена верстка apps & placement

--- a/sources/less/includes/grid.less
+++ b/sources/less/includes/grid.less
@@ -26,6 +26,22 @@
   }
 }
 
+.grid_md-size_2 {
+  @media (max-width: 1024px) {
+    .grid__section {
+      width: 50%;
+    }
+  }
+}
+
+.grid_md-size_1 {
+  @media (max-width: 1024px) {
+    .grid__section {
+      width: 100%;
+    }
+  }
+}
+
 .grid__section {
   box-sizing: border-box;
   float: left;
