--- a/sources/less/includes/select2.less
+++ b/sources/less/includes/select2.less
@@ -112,7 +112,7 @@
 }
 
 .select2-container--default .select2-search--dropdown .select2-search__field {
-  border-color: @gray;
+  border-color: #e6e9ed;
   border-radius: 5px;
   outline: none;
 }
