Исправлна верстка add placement

--- a/sources/less/includes/content.less
+++ b/sources/less/includes/content.less
@@ -77,6 +77,10 @@
   width: 25%;
   vertical-align: middle;
   background: #f8fafb;
+
+  @media (max-width: 1279px) {
+    width: 40%;
+  }
 }
 
 .content__title {
