Добавлены фильтры на страницу dashboard

--- a/sources/less/includes/field.less
+++ b/sources/less/includes/field.less
@@ -120,6 +120,7 @@
   white-space: nowrap;
   padding-right: 30px;
   font-size: 14px;
+  box-shadow: none;
 
   .icon_cursor {
     position: absolute;
