--- a/sources/less/includes/select2.less
+++ b/sources/less/includes/select2.less
@@ -117,20 +117,53 @@
   outline: none;
 }
 
-.select2-wrapper_sm {
-  .select2-container--default .select2-selection--single .select2-selection__rendered {
-    line-height: 34px;
-    padding-left: 15px;
-    padding-right: 15px;
-    font-size: 14px;
-  }
+// .filter-select {
+//   .select2-container--default {
+//     .select2-selection {
+//       min-height: 36px;
 
-  .select2-container--default .select2-selection--single {
-    height: 36px;
-  }
+//       &:after {
+//         content: '';
+//         display: block;
+//         position: absolute;
+//         top: 50%;
+//         right: 10px;
+//         width: 9px;
+//         height: 9px;
+//         margin: -4.5px 0 0;
+//         background: data-uri('../img/icon_cursor_down.png') center center no-repeat;
+//       }
 
-  .select2-container--default .select2-selection--single .select2-selection__arrow {
-    height: 34px;
-    width: 34px;
-  }
-}
+//       .select2-selection__choice {
+//         display: inline;
+//         padding: 0;
+//         margin: 0;
+//         text-transform: initial;
+//         font-size: 14px;
+//         background: none;
+//         color: @black;
+//         float: none;
+
+//         &:before {
+//           content: ', ';
+//         }
+
+//         &:first-child {
+//           &:before {
+//             display: none;
+//           }
+//         }
+//       }
+
+//       .select2-selection__rendered {
+//         padding: 0 30px 0 20px;
+//         line-height: 34px;
+//       }
+
+//       .select2-selection__choice__remove,
+//       .select2-search--inline {
+//         display: none;
+//       }
+//     }
+//   }
+// }
